# gastool

./: .gitignore  Makefile.am  bootstrap  configure.ac
include/: cfgfile.h  cfgtree.h  common.h  configmake.mk  gasconfig.h  local.mk  log.h  parser.h
src/: cfgfile.c  common.c  gastoold.c  local.mk  log.c  parser.c
